--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,16 +16,15 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="700dp"
+        android:layout_height="0dp"
         android:layout_weight="1">
 
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"></LinearLayout>
+            android:orientation="vertical" />
     </ScrollView>
-
 
     <Button
         android:id="@+id/newButton"
@@ -33,6 +32,4 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="Add New Employer" />
-
-
 </LinearLayout>
