--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,19 +13,22 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
+
         <Button
             android:id="@+id/historyButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="17dp"
+            android:layout_height="58dp"
             android:layout_weight="1"
             android:text="History" />
 
         <Button
-            android:id="@+id/calculatorButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:id="@+id/openCalculatorButton"
+            android:layout_width="17dp"
+            android:layout_height="58dp"
             android:layout_weight="1"
-            android:text="Calculator" />
+            android:onClick="openCalculator"
+            android:text="Open Calculator" />
+
     </LinearLayout>
 
     <ScrollView
