--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,12 +64,76 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Add Employer" />
-
         <Button
-            android:id="@+id/menuAddJob"
+            android:id="@+id/openCalculatorButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Add Job" />
+            android:text="Hesap Makinesi"
+            android:onClick="openCalculator" />
+        <!-- hesap makinesi -->
+        <LinearLayout
+            android:id="@+id/calculatorLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp">
+
+            <EditText
+                android:id="@+id/num1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Sayı 1"
+                android:inputType="numberDecimal" />
+
+            <EditText
+                android:id="@+id/num2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Sayı 2"
+                android:inputType="numberDecimal" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="+"
+                    android:onClick="calculateAdd" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="-"
+                    android:onClick="calculateSubtract" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="×"
+                    android:onClick="calculateMultiply" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="÷"
+                    android:onClick="calculateDivide" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/resultTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Sonuç: "
+                android:textSize="18sp"
+                android:paddingTop="8dp" />
+        </LinearLayout>
+
+
+
 
     </LinearLayout>
 </androidx.drawerlayout.widget.DrawerLayout>
