--- a/app/src/main/res/layout/input_dialog_layout.xml
+++ b/app/src/main/res/layout/input_dialog_layout.xml
@@ -26,4 +26,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Description" />
+
+    <EditText
+        android:id="@+id/TextPlace"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Mekan" />
+
 </LinearLayout>
