--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="rounded_button">
-        <item name="android:background">@drawable/rounded_button_background</item>
+        <item name="android:background">@drawable/rounded_button</item>
         <item name="android:textColor">@android:color/holo_green_dark</item>
         <item name="android:textSize">16sp</item>
-        <!-- Diğer düğme özellikleri -->
     </style>
 
+
+    <style name="CalcBtn">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">64dp</item>
+        <item name="android:layout_margin">4dp</item>
+        <item name="android:layout_columnWeight">1</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:background">#222222</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
 
 </resources>
 
