--- a/app/src/main/res/layout/input_dialog_layout.xml
+++ b/app/src/main/res/layout/input_dialog_layout.xml
@@ -32,5 +32,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Description" />
+    <CheckBox
+        android:id="@+id/checkDaily"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Günlük iş (otomatik onaylansın)" />
+
 
 </LinearLayout>
