--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -1,12 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+    <solid android:color="@android:color/white"/> <!-- Kartın arka planını beyaz yap -->
+    <corners android:radius="12dp"/> <!-- Köşeleri yuvarlat -->
+    <stroke android:width="1dp" android:color="#DDDDDD"/> <!-- İnce gri kenar çizgisi -->
+    <padding android:left="8dp" android:top="8dp" android:right="8dp" android:bottom="8dp"/>
 
-    <solid android:color="#6200EE" />
-    <corners android:radius="16dp" />
-    <padding
-        android:left="12dp"
-        android:top="8dp"
-        android:right="12dp"
-        android:bottom="8dp" />
+    <menu xmlns:android="http://schemas.android.com/apk/res/android">
+        <item
+            android:id="@+id/nav_employer"
+            android:title="Employer"
+            android:icon="@drawable/ic_employer" />
+        <item
+            android:id="@+id/nav_calendar"
+            android:title="Calendar"
+            android:icon="@drawable/ic_calendar" />
+        <item
+            android:id="@+id/nav_incomplete"
+            android:title="Incomplete"
+            android:icon="@drawable/ic_incomplete" />
+        <item
+            android:id="@+id/nav_history"
+            android:title="History"
+            android:icon="@drawable/ic_history" />
+        <item
+            android:id="@+id/nav_calculator"
+            android:title="Calculator"
+            android:icon="@drawable/ic_calculator" />
+    </menu>
 </shape>
+
+
