--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#7FFF00</color>
+    <color name="colorPrimaryDark">#6AE000</color>
+    <color name="colorAccent">#7FFF00</color>
+    <color name="colorBackground">#FFFFFF</color>
+    <color name="colorText">#000000</color>
 </resources>
