--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -2,8 +2,16 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@android:color/white" />
+    <solid android:color="@color/colorPrimary" />
     <corners android:radius="12dp" />
-    <stroke android:width="1dp" android:color="#DDDDDD" />
-    <padding android:left="8dp" android:top="8dp" android:right="8dp" android:bottom="8dp" />
+
+    <padding
+        android:left="12dp"
+        android:top="10dp"
+        android:right="12dp"
+        android:bottom="10dp" />
+
+    <stroke
+        android:width="1dp"
+        android:color="@color/colorPrimaryDark" />
 </shape>
