--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -1,21 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="rounded_button">
-        <item name="android:background">@drawable/rounded_button</item>
-        <item name="android:textColor">@android:color/holo_green_dark</item>
-        <item name="android:textSize">16sp</item>
+
+    <!-- Uygulamanın genel teması -->
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="android:colorBackground">@color/backgroundLight</item>
+        <item name="android:textColor">@color/textPrimary</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <!-- Modern Yuvarlatılmış Buton Stili -->
+    <style name="RoundedButton">
+        <item name="android:background">@drawable/rounded_button</item>
+        <item name="android:textColor">@color/buttonText</item>
+        <item name="android:padding">12dp</item>
+        <item name="android:minHeight">48dp</item>
+        <item name="android:layout_margin">6dp</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
 
+    <!-- 🧮 Hesap Makinesi Buton Stili -->
     <style name="CalcBtn">
         <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">64dp</item>
+        <item name="android:layout_height">80dp</item>
         <item name="android:layout_margin">4dp</item>
-        <item name="android:layout_columnWeight">1</item>
-        <item name="android:textSize">24sp</item>
-        <item name="android:background">#222222</item>
-        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:background">@drawable/rounded_button</item>
+        <item name="android:textColor">@color/buttonText</item>
+        <item name="android:textSize">22sp</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:gravity">center</item>
+        <item name="android:elevation">3dp</item>
     </style>
 
 </resources>
-
