--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,16 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.MyApplicationennew" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
+    <!-- ✅ Uygulamanın temel teması -->
+    <style name="Theme.MyApplicationennew" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Ana renkler -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryVariant">@color/colorPrimaryDark</item>
+        <item name="colorOnPrimary">@color/buttonText</item>
+        <item name="android:textColor">@color/textPrimary</item>
+        <item name="android:windowBackground">@color/backgroundLight</item>
     </style>
 
-    <style name="Theme.MyApplicationennew" parent="Base.Theme.MyApplicationennew" />
+    <!-- (isteğe bağlı) Base tema bırakılabilir -->
+    <style name="Base.Theme.MyApplicationennew" parent="Theme.MyApplicationennew" />
+
 </resources>
