--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -1,16 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- Uygulamanın genel teması -->
-    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
-        <item name="android:colorBackground">@color/backgroundLight</item>
-        <item name="android:textColor">@color/textPrimary</item>
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-    </style>
-
-    <!-- Modern Yuvarlatılmış Buton Stili -->
+    <!-- ✅ Modern Yuvarlatılmış Buton Stili -->
     <style name="RoundedButton">
         <item name="android:background">@drawable/rounded_button</item>
         <item name="android:textColor">@color/buttonText</item>
@@ -21,7 +12,7 @@
         <item name="android:textAllCaps">false</item>
     </style>
 
-    <!-- 🧮 Hesap Makinesi Buton Stili -->
+    <!-- ✅ Hesap Makinesi Buton Stili -->
     <style name="CalcBtn">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">80dp</item>
@@ -36,3 +27,5 @@
     </style>
 
 </resources>
+
+
