--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- ✅ Uygulamanın temel teması -->
+    <!-- ✅ Uygulamanın ana teması -->
     <style name="Theme.MyApplicationennew" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Ana renkler -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryVariant">@color/colorPrimaryDark</item>
         <item name="colorOnPrimary">@color/buttonText</item>
-        <item name="android:textColor">@color/textPrimary</item>
         <item name="android:windowBackground">@color/backgroundLight</item>
+        <item name="android:textColor">@color/textPrimary</item>
+        <item name="android:navigationBarColor">@color/colorPrimaryDark</item>
+        <item name="android:statusBarColor">@color/colorPrimaryDark</item>
+        <item name="android:fontFamily">sans-serif</item>
     </style>
-
-    <!-- (isteğe bağlı) Base tema bırakılabilir -->
-    <style name="Base.Theme.MyApplicationennew" parent="Theme.MyApplicationennew" />
 
 </resources>
