--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-        <item android:id="@+id/nav_employer" android:title="Employer" android:icon="@drawable/ic_employer" />
-        <item android:id="@+id/nav_calendar" android:title="Calendar" android:icon="@drawable/ic_calendar" />
-        <item android:id="@+id/nav_incomplete" android:title="Incomplete" android:icon="@drawable/ic_incomplete" />
-        <item android:id="@+id/nav_history" android:title="History" android:icon="@drawable/ic_history" />
-        <item android:id="@+id/nav_calculator" android:title="Calculator" android:icon="@drawable/ic_calculator" />
+
+        <item
+            android:id="@+id/nav_home"
+            android:icon="@android:drawable/ic_menu_view"
+            android:title="Home" />
+
+        <item
+            android:id="@+id/nav_calendar"
+            android:icon="@android:drawable/ic_menu_month"
+            android:title="Calendar" />
+
+        <item
+            android:id="@+id/nav_history"
+            android:icon="@android:drawable/ic_menu_recent_history"
+            android:title="History" />
+
 </menu>
-
-
