--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -1,13 +1,14 @@
 <resources>
 
     <style name="RoundedButton">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@drawable/rounded_button</item>
         <item name="android:textColor">@color/buttonText</item>
         <item name="android:padding">12dp</item>
-        <item name="android:layout_margin">6dp</item>
-        <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:textAllCaps">false</item>
     </style>
+
 
     <style name="CalcBtn">
         <item name="android:layout_width">0dp</item>
