--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -5,13 +5,11 @@
     android:padding="16dp"
     android:background="#000000">
 
-
     <Button
         android:id="@+id/btnBackCalc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="← Geri"
-        android:onClick="onBackPressed"
         android:background="#7FFF00"
         android:textColor="#FFFFFF"
         android:padding="8dp"
@@ -37,104 +35,32 @@
         android:rowCount="5">
 
         <!-- Satır 1 -->
-        <Button
-            style="@style/CalcBtn"
-            android:onClick="onClearClick"
-            android:text="C" />
-
-        <Button
-            style="@style/CalcBtn"
-            android:onClick="onBackspaceClick"
-            android:text="⌫" />
-
-        <Button
-            style="@style/CalcBtn"
-            android:onClick="onOperatorClick"
-            android:text="%" />
-
-        <Button
-            style="@style/CalcBtn"
-            android:onClick="onOperatorClick"
-            android:text="÷" />
+        <Button style="@style/CalcBtn" android:onClick="onClearClick" android:text="C" />
+        <Button style="@style/CalcBtn" android:onClick="onBackspaceClick" android:text="⌫" />
+        <Button style="@style/CalcBtn" android:onClick="onOperatorClick" android:text="%" />
+        <Button style="@style/CalcBtn" android:onClick="onOperatorClick" android:text="÷" />
 
         <!-- Satır 2 -->
-        <Button
-            style="@style/CalcBtn"
-            android:onClick="onDigitClick"
-            android:text="7" />
-
-        <Button
-            style="@style/CalcBtn"
-            android:onClick="onDigitClick"
-            android:text="8" />
-
-        <Button
-            style="@style/CalcBtn"
-            android:onClick="onDigitClick"
-            android:text="9" />
-
-        <Button
-            style="@style/CalcBtn"
-            android:onClick="onOperatorClick"
-            android:text="×" />
+        <Button style="@style/CalcBtn" android:onClick="onDigitClick" android:text="7" />
+        <Button style="@style/CalcBtn" android:onClick="onDigitClick" android:text="8" />
+        <Button style="@style/CalcBtn" android:onClick="onDigitClick" android:text="9" />
+        <Button style="@style/CalcBtn" android:onClick="onOperatorClick" android:text="×" />
 
         <!-- Satır 3 -->
-        <Button
-            style="@style/CalcBtn"
-            android:onClick="onDigitClick"
-            android:text="4" />
-
-        <Button
-            style="@style/CalcBtn"
-            android:onClick="onDigitClick"
-            android:text="5" />
-
-        <Button
-            style="@style/CalcBtn"
-            android:onClick="onDigitClick"
-            android:text="6" />
-
-        <Button
-            style="@style/CalcBtn"
-            android:onClick="onOperatorClick"
-            android:text="-" />
+        <Button style="@style/CalcBtn" android:onClick="onDigitClick" android:text="4" />
+        <Button style="@style/CalcBtn" android:onClick="onDigitClick" android:text="5" />
+        <Button style="@style/CalcBtn" android:onClick="onDigitClick" android:text="6" />
+        <Button style="@style/CalcBtn" android:onClick="onOperatorClick" android:text="-" />
 
         <!-- Satır 4 -->
-        <Button
-            style="@style/CalcBtn"
-            android:onClick="onDigitClick"
-            android:text="1" />
-
-        <Button
-            style="@style/CalcBtn"
-            android:onClick="onDigitClick"
-            android:text="2" />
-
-        <Button
-            style="@style/CalcBtn"
-            android:onClick="onDigitClick"
-            android:text="3" />
-
-        <Button
-            style="@style/CalcBtn"
-            android:onClick="onOperatorClick"
-            android:text="+" />
+        <Button style="@style/CalcBtn" android:onClick="onDigitClick" android:text="1" />
+        <Button style="@style/CalcBtn" android:onClick="onDigitClick" android:text="2" />
+        <Button style="@style/CalcBtn" android:onClick="onDigitClick" android:text="3" />
+        <Button style="@style/CalcBtn" android:onClick="onOperatorClick" android:text="+" />
 
         <!-- Satır 5 -->
-        <Button
-            style="@style/CalcBtn"
-            android:layout_columnSpan="2"
-            android:onClick="onDigitClick"
-            android:text="0" />
-
-        <Button
-            style="@style/CalcBtn"
-            android:onClick="onDigitClick"
-            android:text="." />
-
-        <Button
-            style="@style/CalcBtn"
-            android:onClick="onEqualClick"
-            android:text="=" />
+        <Button style="@style/CalcBtn" android:layout_columnSpan="2" android:onClick="onDigitClick" android:text="0" />
+        <Button style="@style/CalcBtn" android:onClick="onDigitClick" android:text="." />
+        <Button style="@style/CalcBtn" android:onClick="onEqualClick" android:text="=" />
     </GridLayout>
 </LinearLayout>
