--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,18 +49,18 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:overScrollMode="never"
-            android:importantForAccessibility="no">
+            android:fillViewport="true">
 
-
-        <LinearLayout
+            <LinearLayout
                 android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:padding="12dp"
                 android:dividerPadding="8dp" />
+
         </ScrollView>
+
 
         <!-- Alt Menü (Bottom Navigation) -->
         <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -164,5 +164,6 @@
                 android:textSize="16sp"
                 android:textStyle="bold" />
         </LinearLayout>
+
     </LinearLayout>
 </androidx.drawerlayout.widget.DrawerLayout>
